--- a/apps/lilium/less/publishing.less
+++ b/apps/lilium/less/publishing.less
@@ -325,10 +325,10 @@
                 background: @lesswhiteish;
             }
 
-            &.blue { color : @blue; }
-            &.green { color : @green; }
-            &.red { color : @red; }
-            &.purple { color : @purple; }
+            &.blue   { color : @blue;   &:hover { color: @whiteish; background: @blue; } }
+            &.green  { color : @green;  &:hover { color: @whiteish; background: @green; } }
+            &.red    { color : @red;    &:hover { color: @whiteish; background: @red; } }
+            &.purple { color : @purple; &:hover { color: @whiteish; background: @purple; } }
         }
     }
 }
